# omni-vibe

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  MEMORY.md  OPENCLAW_CONNECT_PRIVATE_MCP.md  README.md  TASK.md  WORKFLOW.md  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: prd.md
docs/plans/: 2026-02-19-orchestrator-design.md  2026-02-19-orchestrator-implementation.md  2026-02-20-deployment-design.md  2026-02-20-deployment-implementation.md
src/: __init__.py  config.py  fault_handler.py  main.py  mcp_client.py  orchestrator.py  router_decision.py  state_manager.py
tests/integration/: test_mcp_server.py  test_orchestrator.py
tests/unit/: test_config.py  test_fault_handler.py  test_main.py  test_mcp_client.py  test_router_decision.py  test_state_manager.py
